--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx",
+    "**/*.tsx", "cypress/component/header.spec.js",
   ],
   "exclude": [
     "node_modules"
