--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "lint": "eslint --ext js,jsx,ts,tsx --fix"
   },
   "dependencies": {
+    "algoliasearch": "^4.10.5",
     "next": "10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-instantsearch-dom": "^6.12.1",
     "sass": "^1.32.12",
     "styled-components": "^5.2.3"
   },
