--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "lint": "eslint --ext js,jsx,ts,tsx --fix"
   },
   "dependencies": {
+    "@types/algoliasearch": "^4.0.0",
+    "@types/react-instantsearch-dom": "^6.12.0",
     "algoliasearch": "^4.10.5",
     "next": "10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-instantsearch-dom": "^6.12.1",
+    "react-instantsearch-dom": "^6.15.0",
     "sass": "^1.32.12",
     "styled-components": "^5.2.3"
   },
