--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,7 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx", "cypress/component/header.spec.js",
+    "**/*.tsx",
   ],
   "exclude": [
     "node_modules"
