algolia key in constants

--- a/.env.local
+++ b/.env.local
@@ -2,3 +2,5 @@ BASE_URL=http://makeup-api.herokuapp.com/api/v1/products
 JSON=.json
 BASE_JSON_URL=$BASE_URL$JSON
 URL_SEARCH=?product_type=
+APP_ID=XZYP9E6B2D
+API_KEY=351ddd988d60d1367b28bc6814901be8
