--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,3 @@
-BASE_URL=http://makeup-api.herokuapp.com/api/v1/products
-JSON=.json
-BASE_JSON_URL=$BASE_URL$JSON
-URL_SEARCH=?product_type=
+BASE_URL=http://localhost:5000
 APP_ID=XZYP9E6B2D
 API_KEY=351ddd988d60d1367b28bc6814901be8
